kubernetes/cashinout_microservice_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashinout-microservice-dep
spec:
  selector:
      matchLabels:
        app: cashinout-microservice-dep
  replicas: 1
  template:
    metadata:
      labels:
        app: cashinout-microservice-dep
    spec:
      containers:
        - name: mymysql
          image: index.docker.io/proxymicros/angular:mymysql
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
        - name: cashinout-microservice-dep
          image: proxymicros/angular:cashinout_microservice
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
      imagePullSecrets:
        - name: myregistrykey
