kubernetes/device_notification_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-notification-microservice
spec:
  selector:
      matchLabels:
        app: device-notification-microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: device-notification-microservice
    spec:
      containers:
        - name: mongo
          image: index.docker.io/proxymicros/angular:mongo
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
        - name: device-notification-microservice
          image: proxymicros/angular:devicennotification
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
      nodeSelector:
        id: master
      imagePullSecrets:
        - name: myregistrykey
