kubernetes/transaction_wallet_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-wallet-microservice
spec:
  selector:
      matchLabels:
        app: transaction-wallet-microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: transaction-wallet-microservice
    spec:
      containers:
        - name: mypostgres
          image: index.docker.io/proxymicros/angular:mypostgres
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: transaction-postgres-pv-claim
        - name: transaction-wallet-microservice
          image: index.docker.io/proxymicros/angular:transaction_wallet
          imagePullPolicy: Always
          ports:
            - containerPort: 8100
      imagePullSecrets:
        - name: myregistrykey
      volumes:
      - name: transaction-postgres-pv-claim
        persistentVolumeClaim:
          claimName: transaction-postgres-pv-claim
