kubernetes/angular_dep_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app
  labels:
    run: angular-app
spec:
  type:  NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    run: angular-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: angular-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: angular-app
    spec:
      containers:
      - name: angular-app
        image: index.docker.io/proxymicros/angular:company
        imagePullPolicy: Always
        resources:
           limits:
             memory: "128Mi"
             cpu: "1"
        ports:
        - containerPort: 80
        - containerPort: 443 
      imagePullSecrets:
        - name: myregistrykey
