kubernetes/cashinout_microservice_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cashinout-microservice-svc
  labels:
    run: cashinout-microservice-svc
spec:
  type: NodePort
  ports:
  - port: 9092
  externalIPs:
    - 10.20.0.170
  selector:
    app : cashinout-microservice-dep
