kubernetes/device_notification_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: device-notification-microservice-service
  labels:
    run: device-notification-microservice-service
spec:
  type: NodePort
  ports:
  - port: 8085
  externalIPs:
    - 10.20.0.170
  selector:
    app : device-notification-microservice
