kubernetes/keycloack.yaml

apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
    name: keycloak
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
      nodePort: 30080
  externalIPs: 
    - 10.20.0.170
  selector:
    app: keycloak
    name: keycloak
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    name: keycloak
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      name: keycloak
      labels:
        app: keycloak
        name: keycloak
    spec:
      restartPolicy: Always
      containers:
      - name: keycloak
        image: jboss/keycloak:4.8.3.Final
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            protocol: TCP
      imagePullSecrets:
        - name: myregistrykey
