kubernetes/profile_management_microservice_dep_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ewallet-management-profil
  labels:
    run: ewallet-management-profil
spec:
  type: NodePort
  ports:
  - port: 8000
  externalIPs:
    - 10.20.0.170
  selector:
    app : management-profile-microservice
---



apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-profile-microservice
spec:
  selector:
      matchLabels:
        app: management-profile-microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: management-profile-microservice
    spec:
      containers:
        - name: mymysql
          image: index.docker.io/proxymicros/angular:mymysql
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
        - name: company-category-microservice
          image: proxymicros/angular:profile_management_ewallet 
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: myregistrykey
