kubernetes/zuul_microservice_dep_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zuul-service
  labels:
    run: zuul-service
spec:
  type: NodePort
  ports:
  - port: 8765
  externalIPs:
    - 10.20.0.170

  selector:
    app : zuul-microservice
---



apiVersion: apps/v1
kind: Deployment
metadata:
  name: zuul-microservice
spec:
  selector:
      matchLabels:
        app: zuul-microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: zuul-microservice
    spec:
      containers:
        - name: zuul
          image: index.docker.io/proxymicros/angular:zuul_microservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8765
      imagePullSecrets:
        - name: myregistrykey
